--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,10 +4,12 @@ $font-heading: 'DM Sans', Arial, sans-serif;
 $font-body: Arial, sans-serif;
 
 $width-max: 1432px;
+$width-xl: 2032px;
 
 $breakpoint-sm: 400px;
 $breakpoint-md: 744px;
 $breakpoint-lg: 1024px;
+$breakpoint-xl: 2032px;
 
 // Primary color scheme
 $color-primary: #dd2121;
