--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -30,6 +30,10 @@
     height: 800px;
   }
 
+  @media (min-width: vars.$breakpoint-xl) {
+    height: 1200px;
+  }
+
   @media (max-width: vars.$breakpoint-md - 1) {
     height: 640px;
     min-height: 100dvh;
@@ -85,9 +89,14 @@
     position: relative;
     width: 140px;
 
-    @media (min-width: vars.$breakpoint-md) {
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
       width: 100%;
       max-width: 500px;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      width: 100%;
+      max-width: 640px;
     }
   }
 
@@ -105,6 +114,10 @@
   
     @media (max-width: vars.$breakpoint-md - 1) {
       display: none;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      margin-top: -2rem;
     }
   }
 }
@@ -150,8 +163,12 @@
       font-size: 2rem;
     }
 
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
       font-size: 3rem;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 4.5rem;
     }
 
     span {
@@ -164,8 +181,12 @@
         color: vars.$color-primary;
       }
 
-      @media (min-width: vars.$breakpoint-lg) {
+      @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
         font-size: 2.5rem;
+      }
+
+      @media (min-width: vars.$breakpoint-xl) {
+        font-size: 3.75rem;
       }
     }
   }
@@ -184,8 +205,12 @@
       font-size: 1.375rem;
     }
 
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
       font-size: 1.625rem;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 2.5rem;
     }
   }
 }
