--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -22,6 +22,10 @@
 
   p {
     font-size: 0.875rem;
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 1.125rem;
+    }
   }
 }
 
@@ -31,6 +35,10 @@
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
+
+  @media (min-width: vars.$breakpoint-xl) {
+    gap: 3rem;
+  }
 }
 
 .social {
@@ -44,12 +52,20 @@
     @media (min-width: vars.$breakpoint-md - 1) {
       padding: 0.75rem;
     }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      padding: 1rem;
+    }
   }
 
   svg {
 
     @media (max-width: vars.$breakpoint-md - 1) {
       width: 28px;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      width: 32px;
     }
   }
 }
