--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -9,21 +9,11 @@
   }
 
   h2 {
-    font-family: vars.$font-heading;
-    font-size: 1.75rem;
-    font-weight: bold;
+    @include mixins.heading2;
     color: vars.$color-heading;
 
     @include mixins.dark-mode {
       color: vars.$color-heading-dark;
-    }
-
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
-      font-size: 2rem;
-    }
-
-    @media (min-width: vars.$breakpoint-lg) {
-      font-size: 2.5rem;
     }
   }
 }
@@ -92,8 +82,12 @@
     width: calc(33.3% - 0.75rem);
   }
 
-  @media (min-width: vars.$breakpoint-lg) {
+  @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
     width: calc(25% - 1.5rem);
+  }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    width: calc(20% - 1.6rem);
   }
 
   &:hover {
@@ -112,7 +106,8 @@
     }
   }
 
-  svg {
+  svg,
+  img {
     width: 100%;
     height: auto;
   }
