--- a/src/components/Section/style.module.scss
+++ b/src/components/Section/style.module.scss
@@ -80,6 +80,10 @@
 
   img {
     border-radius: 1rem;
+
+    @media (min-width: vars.$breakpoint-xl) {
+      width: 640px;
+    }
   }
 }
 
@@ -108,43 +112,21 @@
   }
 
   h2 {
-    font-family: vars.$font-heading;
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: vars.$color-primary;
-
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
-      font-size: 1.375rem;
-    }
-
-    @media (min-width: 1024px) {
-      font-size: 1.5rem;
-    }
-  }
-
-  h3 {
-    font-family: vars.$font-heading;
-    font-size: 1.75rem;
-    font-weight: 700;
+    @include mixins.heading2;
     color: vars.$color-heading;
 
     @include mixins.dark-mode {
       color: vars.$color-heading-dark;
     }
+  }
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
-      font-size: 2rem;
-    }
-
-    @media (min-width: 1024px) {
-      font-size: 2.5rem;
-    }
+  h3 {
+    @include mixins.heading3;
+    color: vars.$color-primary;
   }
 
   p {
-    @media (min-width: vars.$breakpoint-md) {
-      font-size: 1.125rem;
-    } 
+    @include mixins.paragraph;
   }
 
   .buttons {
