--- a/src/components/Stack/style.module.scss
+++ b/src/components/Stack/style.module.scss
@@ -17,21 +17,11 @@
   width: 100%;
 
   h2 {
-    font-family: vars.$font-heading;
-    font-size: 1.75rem;
-    font-weight: bold;
+    @include mixins.heading2;
     color: vars.$color-heading;
 
     @include mixins.dark-mode {
       color: vars.$color-heading-dark;
-    }
-
-    @media (min-width: vars.$breakpoint-md) {
-      font-size: 2rem;
-    }
-
-    @media (min-width: vars.$breakpoint-lg) {
-      font-size: 2.5rem;
     }
   }
 }
@@ -45,6 +35,10 @@
   @media (min-width: vars.$breakpoint-md) {
     justify-content: center;
   }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    gap: 3rem;
+  }
 }
 
 .item {
@@ -56,8 +50,12 @@
     color: vars.$color-heading-dark;
   }
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
     width: 60px;
+  }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    width: 80px;
   }
 
   &:before {
@@ -98,5 +96,6 @@
     transform: translate(-50%, -50%);
     max-height: 100%;
     max-width: 100%;
+    width: 100%;
   }
 }
