--- a/src/components/Timeline/style.module.scss
+++ b/src/components/Timeline/style.module.scss
@@ -82,25 +82,6 @@
 
   h3 {
     font-family: vars.$font-heading;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: bold;
-    color: vars.$color-primary;
-    margin-bottom: -0.5rem;
-
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1){
-      font-size: 1.375rem;
-      line-height: 1.2;
-    }
-
-    @media (min-width: vars.$breakpoint-lg) {
-      font-size: 1.5rem;
-      line-height: 2rem;
-    }
-  }
-
-  h4 {
-    font-family: vars.$font-heading;
     font-size: 1.375rem;
     font-weight: bold;
     color: vars.$color-heading;
@@ -116,6 +97,39 @@
     @media (min-width: vars.$breakpoint-lg) {
       font-size: 1.75rem;
     }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 2.25rem;
+    }
+  }
+
+  h4 {
+    font-family: vars.$font-heading;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: bold;
+    color: vars.$color-primary;
+    margin-bottom: -0.5rem;
+
+    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1){
+      font-size: 1.375rem;
+      line-height: 1.2;
+    }
+
+    @media (min-width: vars.$breakpoint-lg) {
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 1.75rem;
+    }
+  }
+
+  svg {
+    @media (min-width: vars.$breakpoint-xl) {
+      height: 48px;
+    }
   }
 
   .content {
@@ -128,6 +142,10 @@
     @media (min-width: vars.$breakpoint-md) {
       font-size: 1.125rem;
       line-height: 1.7;
+    }
+
+    @media (min-width: vars.$breakpoint-xl) {
+      font-size: 1.5rem;
     }
   }
 }
@@ -161,43 +179,21 @@
   }
 
   h2 {
-    font-family: vars.$font-heading;
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: vars.$color-primary;
-
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
-      font-size: 1.375rem;
-    }
-
-    @media (min-width: vars.$breakpoint-lg) {
-      font-size: 1.5rem;
-    }
-  }
-
-  h3 {
-    font-family: vars.$font-heading;
-    font-size: 1.75rem;
-    font-weight: 700;
+    @include mixins.heading2;
     color: vars.$color-heading;
 
     @include mixins.dark-mode {
       color: vars.$color-heading-dark;
     }
+  }
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
-      font-size: 2rem;
-    }
-
-    @media (min-width: vars.$breakpoint-lg) {
-      font-size: 2.5rem;
-    }
+  h3 {
+    @include mixins.heading3;
+    color: vars.$color-primary;
   }
 
   p {
-    @media (min-width: vars.$breakpoint-md) {
-      font-size: 1.125rem;
-    } 
+    @include mixins.paragraph;
   }
 
   .buttons {
