--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -25,6 +25,10 @@
   max-width: vars.$width-max;
   margin: 0 auto;
   padding: 0 1rem;
+
+  @media (min-width: vars.$breakpoint-xl) {
+    max-width: vars.$width-xl;
+  }
 }
 
 @mixin toolbar {
@@ -80,5 +84,54 @@
     @media (min-width: vars.$breakpoint-md) {
       display: block;
     }
+  }
+}
+
+@mixin heading2 {
+  font-family: vars.$font-heading;
+  font-size: 1.75rem;
+  font-weight: 700;
+
+  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    font-size: 2rem;
+  }
+
+  @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+    font-size: 2.5rem;
+  }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    font-size: 3rem;
+  }
+}
+
+@mixin heading3 {
+  font-family: vars.$font-heading;
+  font-size: 1.25rem;
+  font-weight: 700;
+
+  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    font-size: 1.375rem;
+  }
+
+  @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+    font-size: 1.5rem;
+  }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    font-size: 2.25rem;
+  }
+}
+
+@mixin paragraph {
+
+  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
+    font-size: 1.125rem;
+    line-height: 1.7;
+  }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    font-size: 1.5rem;
+    line-height: 1.7;
   }
 }
