--- a/src/components/Section/style.module.scss
+++ b/src/components/Section/style.module.scss
@@ -9,6 +9,10 @@
   @media (min-width: vars.$breakpoint-md) {
     text-align: left;
   }
+
+  @media (min-width: vars.$breakpoint-xl) {
+    scroll-margin-top: 136px;
+  }
 }
 
 .container {
@@ -113,7 +117,10 @@
 
   h2 {
     @include mixins.heading2;
-    color: vars.$color-heading;
+
+    & {
+      color: vars.$color-heading;
+    }
 
     @include mixins.dark-mode {
       color: vars.$color-heading-dark;
@@ -122,7 +129,10 @@
 
   h3 {
     @include mixins.heading3;
-    color: vars.$color-primary;
+
+    & {
+      color: vars.$color-primary;
+    }
   }
 
   p {
