--- a/src/components/Timeline/style.module.scss
+++ b/src/components/Timeline/style.module.scss
@@ -3,6 +3,10 @@
 
 .timeline {
   scroll-margin-top: 110px;
+
+  @media (min-width: vars.$breakpoint-xl) {
+    scroll-margin-top: 136px;
+  }
 }
 
 .container {
