--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -31,10 +31,13 @@
 
 .container {
   @include mixins.container;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 2rem;
+
+  & {
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+  }
 
   @media (min-width: vars.$breakpoint-xl) {
     gap: 3rem;
