--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -105,6 +105,7 @@
       &:hover {
         background: vars.$color-nav-hover;
         color: vars.$color-nav-hover-text;
+        transform: scale(1.05);
 
         @include mixins.dark-mode {
           background: vars.$color-nav-hover-dark;
