--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -46,7 +46,7 @@ $color-block-dark: #1a1a1a;
 $color-tooltip-dark: #fff;
 $color-tooltip-text-dark: #000;
 
-$color-header: $color-info;
+$color-header: $color-rebecca;
 $color-nav: color.adjust($color-header, $lightness: -10%);
 $color-nav-text: #fff;
 $color-nav-hover: #fff;
