--- a/src/components/styleguide/Social/style.module.scss
+++ b/src/components/styleguide/Social/style.module.scss
@@ -18,6 +18,10 @@
       }
     }
 
+    &:focus {
+      transform: scale(1);
+    }
+
     @media (min-width: vars.$breakpoint-xl) {
       padding: 1rem;
     }
