--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,5 +1,3 @@
-@use "@/styles/variables" as vars;
-
 .main {
   width: 100%;
   display: flex;
@@ -8,12 +6,12 @@
   padding: 0 0 2rem;
   transition: all .3s ease;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     gap: 4rem;
     padding: 0 0 3rem;
   }
 
-  @media (min-width: vars.$breakpoint-lg) {
+  @media (min-width: $breakpoint-lg) {
     gap: 8rem;
   }
 }
