--- a/src/components/blocks/Banner/style.module.scss
+++ b/src/components/blocks/Banner/style.module.scss
@@ -1,22 +1,17 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
-
 .banner {
   position: relative;
-  background: vars.$color-header;
+  background: $color-header;
 
-  @include mixins.dark-mode {
+  @include dark-mode {
     background: transparent;
   }
 }
 
 .container {
-  @include mixins.container;
+  @include container;
 
-  & {
-    padding: 0;
-    position: relative;
-  }
+  padding: 0;
+  position: relative;
 }
 
 .content {
@@ -27,17 +22,17 @@
   flex-direction: column;
   padding-top: 78px;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     justify-content: flex-start;
     flex-direction: row;
     height: 800px;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     height: 1200px;
   }
 
-  @media (max-width: vars.$breakpoint-md - 1) {
+  @media (max-width: $breakpoint-md - 1) {
     height: 640px;
     min-height: 100dvh;
   }
@@ -47,7 +42,7 @@
   display: flex;
   padding: 0 1rem;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     flex-basis: 50%;
     justify-content: flex-end;
     padding-left: 2rem;
@@ -92,12 +87,12 @@
     position: relative;
     width: 140px;
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-xl - 1) {
       width: 100%;
       max-width: 500px;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       width: 100%;
       max-width: 640px;
     }
@@ -115,11 +110,11 @@
     margin-top: -1rem;
     z-index: 1;
   
-    @media (max-width: vars.$breakpoint-md - 1) {
+    @media (max-width: $breakpoint-md - 1) {
       display: none;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       margin-top: -2rem;
     }
   }
@@ -132,7 +127,7 @@
   padding: 1rem 1rem 0;
   text-align: center;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     flex-basis: 50%;
     padding: 4rem 1rem;
     text-align: left;
@@ -153,24 +148,24 @@
   }
 
   h1 {
-    font-family: vars.$font-heading;
+    font-family: $font-heading;
     font-size: 1.75rem;
     font-weight: bold;
     color: #FFF;
 
-    @include mixins.dark-mode {
-      color: vars.$color-heading-dark;
+    @include dark-mode {
+      color: $color-heading-dark;
     }
 
-    @media (min-width: vars.$breakpoint-sm) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-sm) and (max-width: $breakpoint-lg - 1) {
       font-size: 2rem;
     }
 
-    @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
       font-size: 3rem;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 4.5rem;
     }
 
@@ -178,41 +173,41 @@
       display: block;
       font-size: 1.5rem;
       margin-bottom: 0.5rem;
-      color: vars.$color-primary;
+      color: $color-primary;
 
-      @include mixins.dark-mode {
-        color: vars.$color-primary;
+      @include dark-mode {
+        color: $color-primary;
       }
 
-      @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+      @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
         font-size: 2.5rem;
       }
 
-      @media (min-width: vars.$breakpoint-xl) {
+      @media (min-width: $breakpoint-xl) {
         font-size: 3.75rem;
       }
     }
   }
 
   h2 {
-    font-family: vars.$font-heading;
+    font-family: $font-heading;
     font-size: 1.125rem;
     font-weight: 500;
     color: #FFF;
 
-    @include mixins.dark-mode {
+    @include dark-mode {
       color: inherit;
     }
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
       font-size: 1.375rem;
     }
 
-    @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
       font-size: 1.625rem;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 2.5rem;
     }
   }
@@ -222,7 +217,7 @@
   justify-content: center;
   margin-top: 1rem;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     justify-content: flex-start;
   }
 }
@@ -237,11 +232,11 @@
   height: 3rem;
   width: 2rem;
 
-  @include mixins.dark-mode {
-    border-color: vars.$color-heading-dark;
+  @include dark-mode {
+    border-color: $color-heading-dark;
   }
 
-  @media (max-width: vars.$breakpoint-sm) {
+  @media (max-width: $breakpoint-sm) {
     border-radius: 12px;
     height: 36px;
     width: 24px;
@@ -262,11 +257,11 @@
     animation-iteration-count: infinite;
     animation-name: slideDown;
 
-    @include mixins.dark-mode {
-      background: vars.$color-heading-dark;
+    @include dark-mode {
+      background: $color-heading-dark;
     }
 
-    @media (max-width: vars.$breakpoint-sm) {
+    @media (max-width: $breakpoint-sm) {
       border-radius: 1.5px;
       top: 8px;
       height: 6px;
