--- a/src/components/blocks/Stack/style.module.scss
+++ b/src/components/blocks/Stack/style.module.scss
@@ -1,17 +1,14 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
-
 .stack {
   text-align: center;
   scroll-margin-top: 110px;
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     scroll-margin-top: 136px;
   }
 }
 
 .container {
-  @include mixins.container;
+  @include container;
 }
 
 .content {
@@ -21,14 +18,12 @@
   width: 100%;
 
   h2 {
-    @include mixins.heading2;
+    @include heading2;
 
-    & {
-      color: vars.$color-heading;
-    }
+    color: $color-heading;
 
-    @include mixins.dark-mode {
-      color: vars.$color-heading-dark;
+    @include dark-mode {
+      color: $color-heading-dark;
     }
   }
 }
@@ -39,11 +34,11 @@
   justify-content: center;
   gap: 2rem;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     justify-content: center;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     gap: 3rem;
   }
 }
@@ -51,17 +46,17 @@
 .item {
   position: relative;
   width: 40px;
-  color: vars.$color-heading;
+  color: $color-heading;
 
-  @include mixins.dark-mode {
-    color: vars.$color-heading-dark;
+  @include dark-mode {
+    color: $color-heading-dark;
   }
 
-  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-md) {
     width: 60px;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     width: 80px;
   }
 
@@ -83,7 +78,7 @@
     height: 100%;
 
     &[data-tooltip] {
-      @include mixins.toolbar;
+      @include toolbar;
 
       &:hover::after {
         margin-top: 1rem;
