--- a/src/components/blocks/Timeline/style.module.scss
+++ b/src/components/blocks/Timeline/style.module.scss
@@ -1,16 +1,14 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
 
 .timeline {
   scroll-margin-top: 110px;
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     scroll-margin-top: 136px;
   }
 }
 
 .container {
-  @include mixins.container;
+  @include container;
 }
 
 .content {
@@ -19,32 +17,32 @@
   flex-wrap: wrap;
   gap: 1.5rem;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     gap: 2rem;
   }
 
-  @media (min-width: vars.$breakpoint-lg) {
+  @media (min-width: $breakpoint-lg) {
     gap: 5rem;
   }
 
   .list {
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) {
       width: calc(60% - 1rem);
     }
 
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: $breakpoint-lg) {
       width: calc(60% - 2.5rem);
     }
   }
 
   .text {
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) {
       width: calc(40% - 1rem);
     }
     
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: $breakpoint-lg) {
       width: calc(40% - 2.5rem);
     }
   }
@@ -56,7 +54,7 @@
   gap: 1rem;
   order: 1;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     gap: 2rem;
   }
 }
@@ -65,18 +63,18 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background: vars.$color-block;
+  background: $color-block;
   border: 1px solid transparent;
   border-width: 1px 0;
   padding: 1.5rem 1rem;
   margin: 0 -1rem;
   
-  @include mixins.dark-mode {
-    background: vars.$color-block-dark;
-    border-color: vars.$color-border-dark;
+  @include dark-mode {
+    background: $color-block-dark;
+    border-color: $color-border-dark;
   }
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     gap: 1rem;
     border-radius: 1rem;
     border-width: 1px;
@@ -85,53 +83,53 @@
   }
 
   h3 {
-    font-family: vars.$font-heading;
+    font-family: $font-heading;
     font-size: 1.375rem;
     font-weight: bold;
-    color: vars.$color-heading;
+    color: $color-heading;
 
-    @include mixins.dark-mode {
-      color: vars.$color-heading-dark;
+    @include dark-mode {
+      color: $color-heading-dark;
     }
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
       font-size: 1.5rem;
     }
 
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: $breakpoint-lg) {
       font-size: 1.75rem;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 2.25rem;
     }
   }
 
   h4 {
-    font-family: vars.$font-heading;
+    font-family: $font-heading;
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: bold;
-    color: vars.$color-primary;
+    color: $color-primary;
     margin-bottom: -0.5rem;
 
-    @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1){
+    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1){
       font-size: 1.375rem;
       line-height: 1.2;
     }
 
-    @media (min-width: vars.$breakpoint-lg) {
+    @media (min-width: $breakpoint-lg) {
       font-size: 1.5rem;
       line-height: 2rem;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 1.75rem;
     }
   }
 
   svg {
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       height: 48px;
     }
   }
@@ -143,12 +141,12 @@
   }
 
   p {
-    @media (min-width: vars.$breakpoint-md) {
+    @media (min-width: $breakpoint-md) {
       font-size: 1.125rem;
       line-height: 1.7;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 1.5rem;
     }
   }
@@ -161,7 +159,7 @@
   gap: 0.5rem;
   text-align: left;
 
-  @media (min-width: vars.$breakpoint-md) {
+  @media (min-width: $breakpoint-md) {
     position: sticky;
     top: 94px;
     text-align: left;
@@ -183,34 +181,30 @@
   }
 
   h2 {
-    @include mixins.heading2;
+    @include heading2;
 
-    & {
-      color: vars.$color-heading;
-    }
+    color: $color-heading;
 
-    @include mixins.dark-mode {
-      color: vars.$color-heading-dark;
+    @include dark-mode {
+      color: $color-heading-dark;
     }
   }
 
   h3 {
-    @include mixins.heading3;
+    @include heading3;
 
-    & {
-      color: vars.$color-primary;
-    }
+    color: $color-primary;
   }
 
   p {
-    @include mixins.paragraph;
+    @include paragraph;
   }
 
   .buttons {
     justify-content: flex-start;
     margin-top: 0.5rem;
 
-    @media (min-width: vars.$breakpoint-md) {
+    @media (min-width: $breakpoint-md) {
       justify-content: flex-start;
       margin-top: 0;
     }
