--- a/src/components/styleguide/Footer/style.module.scss
+++ b/src/components/styleguide/Footer/style.module.scss
@@ -1,6 +1,3 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
-
 .footer {
   padding: 2rem 0;
 
@@ -17,57 +14,55 @@
   }
 
   .logo {
-    color: vars.$color-heading;
+    color: $color-heading;
   }
 
   p {
     font-size: 0.875rem;
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       font-size: 1.125rem;
     }
   }
 }
 
 .container {
-  @include mixins.container;
+  @include container;
 
-  & {
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 2rem;
-  }
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     gap: 3rem;
   }
 }
 
 .social {
 
-  @media (max-width: vars.$breakpoint-md - 1) {
+  @media (max-width: $breakpoint-md - 1) {
     gap: 2rem;
   }
 
   a {
 
-    @media (min-width: vars.$breakpoint-md - 1) {
+    @media (min-width: $breakpoint-md - 1) {
       padding: 0.75rem;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       padding: 1rem;
     }
   }
 
   svg {
 
-    @media (max-width: vars.$breakpoint-md - 1) {
+    @media (max-width: $breakpoint-md - 1) {
       width: 28px;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       width: 32px;
     }
   }
