--- a/src/components/ui/Button/style.module.scss
+++ b/src/components/ui/Button/style.module.scss
@@ -1,6 +1,3 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
-
 .buttons {
   width: 100%;
   display: flex;
@@ -30,7 +27,7 @@
     transform: scale(1);
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     font-size: 1.125rem;
     padding: 0.75rem 2rem;
     height: 56px;
@@ -46,7 +43,7 @@
   padding: 0.75rem 2rem;
   height: 56px;
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     font-size: 1.25rem;
     padding: 1rem 2.5rem;
     height: 66px;
@@ -54,22 +51,22 @@
 }
 
 .primary {
-  background: vars.$color-primary;
-  color: vars.$color-primary-text;
+  background: $color-primary;
+  color: $color-primary-text;
 
   @media (hover: hover) {
     &:hover {
-      background: vars.$color-primary-hover;
+      background: $color-primary-hover;
     }
   }
 }
 
 .link {
-  color: vars.$color-heading;
+  color: $color-heading;
   padding: 0.5rem 1rem;
 
-  @include mixins.dark-mode {
-    color: vars.$color-heading-dark;
+  @include dark-mode {
+    color: $color-heading-dark;
   }
 
   &.large {
@@ -83,7 +80,7 @@
   }
 
   :global(#banner) & {
-    @include mixins.light-mode {
+    @include light-mode {
       color: #FFF;
     }
   }
