--- a/src/components/ui/Toggle/style.module.scss
+++ b/src/components/ui/Toggle/style.module.scss
@@ -1,6 +1,3 @@
-@use '@/styles/variables' as vars;
-@use '@/styles/mixins' as mixins;
-
 .toggle {
   position: relative;
   margin: 1.1875rem 0;
@@ -8,17 +5,17 @@
   width: 76px;
   cursor: pointer;
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     margin: 1.5rem 0;
     width: 106px;
   }
 
   @media (hover: hover) {
     &:hover span {
-      background: vars.$color-nav-hover;
+      background: $color-nav-hover;
       
-      @include mixins.dark-mode {
-        background: vars.$color-nav-hover-dark;
+      @include dark-mode {
+        background: $color-nav-hover-dark;
       }
     }
   }
@@ -28,15 +25,15 @@
     display: block;
     height: 40px;
     width: 100%;
-    background: vars.$color-nav;
+    background: $color-nav;
     border-radius: 20px;
     transition: all 0.3s;
 
-    @include mixins.dark-mode {
-      background: vars.$color-nav-dark;
+    @include dark-mode {
+      background: $color-nav-dark;
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       height: 56px;
       border-radius: 28px;
     }
@@ -49,19 +46,19 @@
       width: 32px;
       border-radius: 16px;
       z-index: 1;
-      background: vars.$color-sun;
+      background: $color-sun;
       left: 40px;
 
-      @include mixins.dark-mode {
-        background: vars.$color-moon;
+      @include dark-mode {
+        background: $color-moon;
         left: 4px;
 
-        @media (min-width: vars.$breakpoint-xl) {
+        @media (min-width: $breakpoint-xl) {
           left: 6px;
         }
       }
       
-      @media (min-width: vars.$breakpoint-xl) {
+      @media (min-width: $breakpoint-xl) {
         top: 6px;
         left: 56px;
         height: 44px;
@@ -79,16 +76,16 @@
     z-index: 1;
     left: 46px;
 
-    @include mixins.dark-mode {
+    @include dark-mode {
       transform: translateY(-50%) rotate(0deg);
       left: 10px;
 
-      @media (min-width: vars.$breakpoint-xl) {
+      @media (min-width: $breakpoint-xl) {
         left: 15px;
       }
     }
 
-    @media (min-width: vars.$breakpoint-xl) {
+    @media (min-width: $breakpoint-xl) {
       left: 66px;
       width: 24px;
       height: 24px;
@@ -98,7 +95,7 @@
   .sun {
     opacity: 1;
 
-    @include mixins.dark-mode {
+    @include dark-mode {
       opacity: 0;
     }
   }
@@ -106,7 +103,7 @@
   .moon {
     opacity: 0;
 
-    @include mixins.dark-mode {
+    @include dark-mode {
       opacity: 1;
     }
   }
