--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,3 @@
-@use '@/styles/variables' as vars;
-
 @mixin dark-mode {
   :global(.dark) & {
     @content;
@@ -22,12 +20,12 @@
 
 @mixin container {
   display: flex;
-  max-width: vars.$width-max;
+  max-width: $width-max;
   margin: 0 auto;
   padding: 0 1rem;
 
-  @media (min-width: vars.$breakpoint-xl) {
-    max-width: vars.$width-xl;
+  @media (min-width: $breakpoint-xl) {
+    max-width: $width-xl;
   }
 }
 
@@ -39,8 +37,8 @@
     left: 50%;
     margin-top: -1rem;
     transform: translateX(-50%);
-    background-color: vars.$color-tooltip;
-    color: vars.$color-tooltip-text;
+    background-color: $color-tooltip;
+    color: $color-tooltip-text;
     padding: 0.325rem 1rem;
     border-radius: 0.5rem;
     white-space: nowrap;
@@ -49,16 +47,16 @@
     transition: opacity 0.2s ease, visibility 0.2s ease;
 
     @include dark-mode {
-      background-color: vars.$color-tooltip-dark;
-      color: vars.$color-tooltip-text-dark;
+      background-color: $color-tooltip-dark;
+      color: $color-tooltip-text-dark;
     }
   }
 
   &:hover::before {
-    border-color: transparent transparent vars.$color-tooltip transparent;
+    border-color: transparent transparent $color-tooltip transparent;
     border-style: solid;
     border-width: 0 6px 6px;
-    content: "";
+    content: '';
     height: 0;
     left: 50%;
     position: absolute;
@@ -71,7 +69,7 @@
     transition: opacity 0.2s ease, visibility 0.2s ease;
 
     @include dark-mode {
-      border-color: transparent transparent vars.$color-tooltip-dark transparent;
+      border-color: transparent transparent $color-tooltip-dark transparent;
     }
   }
 
@@ -81,56 +79,56 @@
     visibility: hidden;
     display: none;
 
-    @media (min-width: vars.$breakpoint-md) {
+    @media (min-width: $breakpoint-md) {
       display: block;
     }
   }
 }
 
 @mixin heading2 {
-  font-family: vars.$font-heading;
+  font-family: $font-heading;
   font-size: 1.75rem;
   font-weight: 700;
 
-  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
     font-size: 2rem;
   }
 
-  @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
     font-size: 2.5rem;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     font-size: 3rem;
   }
 }
 
 @mixin heading3 {
-  font-family: vars.$font-heading;
+  font-family: $font-heading;
   font-size: 1.25rem;
   font-weight: 700;
 
-  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-lg - 1) {
+  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
     font-size: 1.375rem;
   }
 
-  @media (min-width: vars.$breakpoint-lg) and (max-width: vars.$breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
     font-size: 1.5rem;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     font-size: 2.25rem;
   }
 }
 
 @mixin paragraph {
 
-  @media (min-width: vars.$breakpoint-md) and (max-width: vars.$breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-xl - 1) {
     font-size: 1.125rem;
     line-height: 1.7;
   }
 
-  @media (min-width: vars.$breakpoint-xl) {
+  @media (min-width: $breakpoint-xl) {
     font-size: 1.5rem;
     line-height: 1.7;
   }
