--- a/src/components/blocks/Timeline/style.module.scss
+++ b/src/components/blocks/Timeline/style.module.scss
@@ -92,7 +92,7 @@
       color: $color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) {
       font-size: 1.5rem;
     }
 
@@ -113,7 +113,7 @@
     color: $color-primary;
     margin-bottom: -0.5rem;
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1){
+    @media (min-width: $breakpoint-md) {
       font-size: 1.375rem;
       line-height: 1.2;
     }
