--- a/src/components/blocks/Banner/style.module.scss
+++ b/src/components/blocks/Banner/style.module.scss
@@ -87,7 +87,7 @@
     position: relative;
     width: 140px;
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-md) {
       width: 100%;
       max-width: 500px;
     }
@@ -157,11 +157,11 @@
       color: $color-heading-dark;
     }
 
-    @media (min-width: $breakpoint-sm) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-sm) {
       font-size: 2rem;
     }
 
-    @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-lg) {
       font-size: 3rem;
     }
 
@@ -179,7 +179,7 @@
         color: $color-primary;
       }
 
-      @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
+      @media (min-width: $breakpoint-lg) {
         font-size: 2.5rem;
       }
 
@@ -199,11 +199,11 @@
       color: inherit;
     }
 
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+    @media (min-width: $breakpoint-md) {
       font-size: 1.375rem;
     }
 
-    @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
+    @media (min-width: $breakpoint-lg) {
       font-size: 1.625rem;
     }
 
