--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -90,11 +90,11 @@
   font-size: 1.75rem;
   font-weight: 700;
 
-  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+  @media (min-width: $breakpoint-md) {
     font-size: 2rem;
   }
 
-  @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-lg) {
     font-size: 2.5rem;
   }
 
@@ -108,11 +108,11 @@
   font-size: 1.25rem;
   font-weight: 700;
 
-  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
+  @media (min-width: $breakpoint-md) {
     font-size: 1.375rem;
   }
 
-  @media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-lg) {
     font-size: 1.5rem;
   }
 
@@ -123,7 +123,7 @@
 
 @mixin paragraph {
 
-  @media (min-width: $breakpoint-md) and (max-width: $breakpoint-xl - 1) {
+  @media (min-width: $breakpoint-md) {
     font-size: 1.125rem;
     line-height: 1.7;
   }
