modal and button amends

--- a/src/components/blocks/Section/style.module.scss
+++ b/src/components/blocks/Section/style.module.scss
@@ -115,7 +115,9 @@
   h2 {
     @include heading2;
 
-    color: $color-heading;
+    & {
+      color: $color-heading;
+    }
 
     @include dark-mode {
       color: $color-heading-dark;
@@ -125,7 +127,9 @@
   h3 {
     @include heading3;
 
-    color: $color-primary;
+    & {
+      color: $color-primary;
+    }
   }
 
   p {
