--- a/src/components/blocks/Banner/style.module.scss
+++ b/src/components/blocks/Banner/style.module.scss
@@ -10,8 +10,10 @@
 .container {
   @include container;
 
-  padding: 0;
-  position: relative;
+  & {
+    padding: 0;
+    position: relative;
+  }
 }
 
 .content {
@@ -40,13 +42,13 @@
 
 .image {
   display: flex;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 
   @media (min-width: $breakpoint-md) {
     flex-basis: 50%;
     justify-content: flex-end;
-    padding-left: 2rem;
-    padding-right: 1rem;
+    padding-left: 3rem;
+    padding-right: 1.5rem;
     order: 1;
   }
 
@@ -124,12 +126,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 1rem 0;
+  padding: 1rem 1.5rem 0;
   text-align: center;
 
   @media (min-width: $breakpoint-md) {
     flex-basis: 50%;
-    padding: 4rem 1rem;
+    padding: 4rem 1.5rem;
     text-align: left;
   }
 
