--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,3 +1,6 @@
+@use '@/styles/variables' as *;
+@use '@/styles/mixins' as *;
+
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -363,4 +366,17 @@ video {
 /* Make elements with the HTML hidden attribute stay hidden by default */
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
+}
+
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px $color-bg inset !important;
+  box-shadow: 0 0 0px 1000px $color-bg inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+
+  @include dark-mode {
+    -webkit-box-shadow: 0 0 0px 1000px $color-bg-dark inset !important;
+    box-shadow: 0 0 0px 1000px $color-bg-dark inset !important;
+  }
 }
