--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,15 @@ $breakpoint-lg: 1024px;
 $breakpoint-xl: 2032px;
 
 // Primary color scheme
+$color-default: #000;
+$color-default-hover: color.adjust($color-default, $lightness: -10%);
+$color-default-text: #fff;
+
+$color-default-dark: #FFF;
+$color-default-hover-dark: color.adjust($color-default-dark, $lightness: 10%);
+$color-default-text-dark: #000;
+
+// Primary color scheme
 $color-primary: #dd2121;
 $color-primary-hover: color.adjust($color-primary, $lightness: -10%);
 $color-primary-text: #fff;
