feat: contact and remove animated

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -55,7 +55,7 @@ $color-block-dark: #1a1a1a;
 $color-tooltip-dark: #fff;
 $color-tooltip-text-dark: #000;
 
-$color-header: $color-rebecca;
+$color-header: $color-info;
 $color-nav: color.adjust($color-header, $lightness: -10%);
 $color-nav-text: #fff;
 $color-nav-hover: #fff;
