--- a/src/components/test/Section/style.module.scss
+++ b/src/components/test/Section/style.module.scss
@@ -35,6 +35,38 @@
 
 .image {
 
+  &.animate img {
+    opacity: 0;
+
+    @media (max-width: $breakpoint-md - 1) {
+      transform: translateY(100px);
+    }
+  }
+
+  &.transition img {
+    
+    @media (max-width: $breakpoint-md - 1) {
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+
+    @media (min-width: $breakpoint-md) {
+      animation-duration: 0.6s;
+    }
+  }
+
+  &.show img {
+    opacity: 1;
+
+    @media (max-width: $breakpoint-md - 1) {
+      transform: translateY(0);
+    }
+
+    @media (min-width: $breakpoint-md) {
+      animation-fill-mode: forwards;
+      animation-name: slideRight;
+    }
+  }
+
   .imageWrap {
     display: flex;
     justify-content: flex-start;
@@ -64,6 +96,20 @@
 
   @media (min-width: $breakpoint-md) {
     gap: 1rem;
+  }
+
+  &.animate {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  &.transition {
+    transition: opacity 0.6s ease, transform 0.6s ease;
+  }
+
+  &.show {
+    opacity: 1;
+    transform: translateY(0);
   }
 
   h2 {
@@ -98,5 +144,17 @@
       justify-content: flex-start;
       margin-top: 0;
     }
+  }
+}
+
+@keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(-50%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
