--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,5 +1,5 @@
-@use '@/styles/variables' as *;
-@use '@/styles/mixins' as *;
+@use './variables' as *;
+@use './mixins' as *;
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
