--- a/src/components/blocks/Stack/style.module.scss
+++ b/src/components/blocks/Stack/style.module.scss
@@ -1,3 +1,6 @@
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as *;
+
 .stack {
   text-align: center;
   scroll-margin-top: 110px;
