--- a/src/components/styleguide/Logo/style.module.scss
+++ b/src/components/styleguide/Logo/style.module.scss
@@ -1,3 +1,6 @@
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as *;
+
 .logo {
   font-family: $font-heading;
   font-size: 1.25rem;
