--- a/src/components/ui/Modal/style.module.scss
+++ b/src/components/ui/Modal/style.module.scss
@@ -1,3 +1,6 @@
+@use '../../../styles/variables' as *;
+@use '../../../styles/mixins' as *;
+
 .modal {
   position: relative;
   z-index: 10000;
@@ -5,6 +8,7 @@
   @media (min-width: $breakpoint-md) {
     position: fixed;
     top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     width: 100dvw;
