--- a/src/components/blocks/Banner/style.module.scss
+++ b/src/components/blocks/Banner/style.module.scss
@@ -84,7 +84,7 @@
     justify-content: center;
     margin-top: -1rem;
     z-index: 1;
-  
+
     @media (max-width: $breakpoint-md - 1) {
       display: none;
     }
@@ -112,7 +112,7 @@
     font-family: $font-heading;
     font-size: 1.75rem;
     font-weight: bold;
-    color: #FFF;
+    color: #fff;
 
     @include dark-mode {
       color: $color-heading-dark;
@@ -154,7 +154,7 @@
     font-family: $font-heading;
     font-size: 1.125rem;
     font-weight: 500;
-    color: #FFF;
+    color: #fff;
 
     @include dark-mode {
       color: inherit;
@@ -188,7 +188,7 @@
   left: 50%;
   bottom: 2rem;
   transform: translateX(-50%);
-  border: 2px solid #FFF;
+  border: 2px solid #fff;
   border-radius: 1rem;
   height: 3rem;
   width: 2rem;
@@ -204,9 +204,9 @@
   }
 
   &:after {
-    background: #FFF;
+    background: #fff;
     border-radius: 3px;
-    content: "";
+    content: '';
     height: 9px;
     left: 50%;
     position: absolute;
