--- a/src/components/blocks/Timeline/style.module.scss
+++ b/src/components/blocks/Timeline/style.module.scss
@@ -28,7 +28,6 @@
   }
 
   .list {
-
     @media (min-width: $breakpoint-md) {
       width: calc(60% - 1rem);
     }
@@ -39,11 +38,10 @@
   }
 
   .text {
-
     @media (min-width: $breakpoint-md) {
       width: calc(40% - 1rem);
     }
-    
+
     @media (min-width: $breakpoint-lg) {
       width: calc(40% - 2.5rem);
     }
@@ -70,7 +68,7 @@
   border-width: 1px 0;
   padding: 1.5rem;
   margin: 0 -1.5rem;
-  
+
   @include dark-mode {
     background: $color-block-dark;
     border-color: $color-border-dark;
@@ -178,7 +176,9 @@
   }
 
   &.transition {
-    transition: opacity 0.6s ease, transform 0.6s ease;
+    transition:
+      opacity 0.6s ease,
+      transform 0.6s ease;
   }
 
   &.show {
