--- a/src/components/styleguide/Logo/style.module.scss
+++ b/src/components/styleguide/Logo/style.module.scss
@@ -5,7 +5,7 @@
   font-family: $font-heading;
   font-size: 1.25rem;
   font-weight: bold;
-  color: #FFF;
+  color: #fff;
 
   @include dark-mode {
     color: $color-heading-dark;
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: center;
     background: $color-primary;
-    color: #FFF;
+    color: #fff;
     font-size: 1.625rem;
     width: 2.5rem;
     height: 2.5rem;
