--- a/src/components/styleguide/Social/style.module.scss
+++ b/src/components/styleguide/Social/style.module.scss
@@ -10,7 +10,7 @@
     color: #fff;
     padding: 0.5rem;
     border-radius: 0 0.5rem 0.5rem 0.5rem;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 
     @media (hover: hover) {
       &:hover {
@@ -31,7 +31,7 @@
 
       :global(#banner) & {
         @include light-mode {
-          background: #FFF;
+          background: #fff;
           color: #0077b5;
         }
       }
