--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -21,8 +21,19 @@
 
 .section {
   padding: 2rem 0;
+
+  a {
+    text-decoration: underline;
+  }
 }
 
 .container {
   @include container;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
