--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,6 @@
+@use 'sass:color';
 @use './variables' as *;
+@use './typography' as *;
 
 @mixin dark-mode {
   :global(.dark) & {
@@ -136,5 +138,119 @@
   @media (min-width: $breakpoint-xl) {
     font-size: 1.5rem;
     line-height: 1.7;
+  }
+}
+
+@mixin button-variant {
+  &.default {
+    background-color: $color-default;
+    color: $color-light;
+
+    @include dark-mode {
+      background-color: $color-default-dark;
+      color: $color-dark;
+    }
+
+    &:hover {
+      background-color: color.adjust($color-default, $lightness: 20%);
+
+      @include dark-mode {
+        background-color: color.adjust($color-default-dark, $lightness: -20%);
+      }
+    }
+  }
+
+  &.primary {
+    background-color: $color-primary;
+    color: $color-light;
+
+    &:hover {
+      background-color: color.adjust($color-primary, $lightness: -10%);
+    }
+  }
+
+  &.success {
+    background-color: $color-success;
+    color: $color-light;
+
+    &:hover {
+      background-color: color.adjust($color-success, $lightness: -10%);
+    }
+  }
+
+  &.disabled,
+  &:disabled {
+    pointer-events: none;
+    cursor: default;
+    background-color: #cccccc;
+    color: #666666;
+
+    @include dark-mode {
+      background-color: #cccccc;
+      color: #666666;
+    }
+
+    @media (hover: hover) {
+      &:hover {
+        background-color: #cccccc;
+        color: #666666;
+        transform: scale(1);
+
+        @include dark-mode {
+          background-color: #cccccc;
+          color: #666666;
+        }
+      }
+    }
+  }
+}
+
+@mixin button-size {
+  &.sm {
+    @include text-sm;
+
+    & {
+      padding: 0.375rem 0.625rem;
+    }
+
+    &.icon {
+      padding: 0.5rem;
+    }
+  }
+
+  &.md {
+    @include text-md;
+
+    & {
+      padding: 0.5rem 1rem;
+    }
+
+    &.icon {
+      padding: 0.625rem;
+    }
+  }
+
+  &.lg {
+    @include text-lg;
+
+    & {
+      padding: 0.625rem 1.25rem;
+    }
+
+    &.icon {
+      padding: 0.75rem;
+    }
+  }
+
+  &.xl {
+    @include text-lg;
+
+    & {
+      padding: 1rem 2.5rem;
+    }
+
+    &.icon {
+      padding: 0.75rem;
+    }
   }
 }
